tring another approach to emulate interaction with Windows process